[package]
name = "kanjilab_server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
kameo = "0.17.0"
serde = "1.0.219"
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["macros"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[lib]
name = "kanjilab_server"
path = "src/lib.rs"